force-app/main/default/objects/BTTS_TrainData__x/BTTS_TrainData__x.object-meta.xml
<CustomObject>
    <externalDataSource>BestTimeToCall</externalDataSource>
    <externalName>BTTC_TrainData_R4Demo</externalName>
    <label>BTTS_TrainData</label>
    <pluralLabel>BTTS_TrainDatas</pluralLabel>
</CustomObject>