force-app/main/default/objects/BTTS_TrainData__x/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>AccountNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>