force-app/main/default/objects/BTTS_TrainData__x/fields/CallResult__c.field-meta.xml
<CustomField>
    <fullName>CallResult__c</fullName>
    <label>CallResult</label>
    <length>20</length>
    <type>Text</type>
</CustomField>