force-app/main/default/objects/BTTS_TrainData__x/fields/DateOfCall__c.field-meta.xml
<CustomField>
    <fullName>DateOfCall__c</fullName>
    <label>DateOfCall</label>
    <length>50</length>
    <type>Text</type>
</CustomField>