force-app/main/default/objects/BTTS_TrainData__x/fields/PatientRegion__c.field-meta.xml
<CustomField>
    <fullName>PatientRegion__c</fullName>
    <label>PatientRegion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>