force-app/main/default/objects/BTTS_TrainData__x/fields/TimeOfCall__c.field-meta.xml
<CustomField>
    <fullName>TimeOfCall__c</fullName>
    <label>TimeOfCall</label>
    <length>100</length>
    <type>Text</type>
</CustomField>