force-app/main/default/objects/BTTS_TrainData__x/fields/VoiceCallID__c.field-meta.xml
<CustomField>
    <fullName>VoiceCallID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoiceCallID</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>BTTS_TrainDatas</relationshipLabel>
    <relationshipName>BTTS_TrainDatas</relationshipName>
    <type>Lookup</type>
</CustomField>